--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </body>
 </html>
